armor stream line

--- a/Warhammer 40k Black Crusade/warhammer40k.html
+++ b/Warhammer 40k Black Crusade/warhammer40k.html
@@ -1075,6 +1075,83 @@
     </div>
   </div>
   <div class="container arms">
+    <div class="rowx">
+      <h1 class="text-center" data-i18n="armour"></h1>
+    </div>
+    <div class="rowx grid 6column">
+      <div class="col border">
+        <div class="rowx">
+          <h2 class="text-center" data-i18n="head"></h2>
+        </div>
+        <div class="rowx text-center"><span data-i18n="(1-10)"></span></div>
+        <div class="rowx grid 2autocolumn">
+          <h3 class="text-center" data-i18n="type"></h3>
+          <label data-i18n-title="head">
+            <input data-i18n-placeholder="head" name="attr_head" placeholder="head" title="@{head}" type="text" value=""/>
+          </label>
+        </div>
+      </div>
+      <div class="col border">
+        <div class="rowx">
+          <h2 class="text-center" data-i18n="right arm"></h2>
+        </div>
+        <div class="rowx text-center"><span data-i18n="(11-20)"></span></div>
+        <div class="rowx grid 2autocolumn">
+          <h3 class="text-center" data-i18n="type"></h3>
+          <label data-i18n-title="right arm">
+            <input data-i18n-placeholder="right arm" name="attr_right_arm" placeholder="right arm" title="@{right_arm}" type="text" value=""/>
+          </label>
+        </div>
+      </div>
+      <div class="col border">
+        <div class="rowx">
+          <h2 class="text-center" data-i18n="left arm"></h2>
+        </div>
+        <div class="rowx text-center"><span data-i18n="(21-30)"></span></div>
+        <div class="rowx grid 2autocolumn">
+          <h3 class="text-center" data-i18n="type"></h3>
+          <label data-i18n-title="left arm">
+            <input data-i18n-placeholder="left arm" name="attr_left_arm" placeholder="left arm" title="@{left_arm}" type="text" value=""/>
+          </label>
+        </div>
+      </div>
+      <div class="col border">
+        <div class="rowx">
+          <h2 class="text-center" data-i18n="body"></h2>
+        </div>
+        <div class="rowx text-center"><span data-i18n="(31-70)"></span></div>
+        <div class="rowx grid 2autocolumn">
+          <h3 class="text-center" data-i18n="type"></h3>
+          <label data-i18n-title="body">
+            <input data-i18n-placeholder="body" name="attr_body" placeholder="body" title="@{body}" type="text" value=""/>
+          </label>
+        </div>
+      </div>
+      <div class="col border">
+        <div class="rowx">
+          <h2 class="text-center" data-i18n="right leg"></h2>
+        </div>
+        <div class="rowx text-center"><span data-i18n="(71-85)"></span></div>
+        <div class="rowx grid 2autocolumn">
+          <h3 class="text-center" data-i18n="type"></h3>
+          <label data-i18n-title="right leg">
+            <input data-i18n-placeholder="right leg" name="attr_right_leg" placeholder="right leg" title="@{right_leg}" type="text" value=""/>
+          </label>
+        </div>
+      </div>
+      <div class="col border">
+        <div class="rowx">
+          <h2 class="text-center" data-i18n="left leg"></h2>
+        </div>
+        <div class="rowx text-center"><span data-i18n="(86-00)"></span></div>
+        <div class="rowx grid 2autocolumn">
+          <h3 class="text-center" data-i18n="type"></h3>
+          <label data-i18n-title="left leg">
+            <input data-i18n-placeholder="left leg" name="attr_left_leg" placeholder="left leg" title="@{left_leg}" type="text" value=""/>
+          </label>
+        </div>
+      </div>
+    </div>
     <div class="row">
       <div class="col left-col">
         <div class="rowx grid headers">
@@ -1206,87 +1283,6 @@
         </div>
       </div>
       <div class="col right-col">
-        <div class="rowx grid headers">
-          <h1 class="text-center" data-i18n="armour"></h1>
-        </div>
-        <div class="rowx grid 3column head">
-          <div class="col border">
-            <div class="rowx">
-              <h2 class="text-center" data-i18n="head"></h2>
-            </div>
-            <div class="rowx text-center"><span data-i18n="(1-10)"></span></div>
-            <div class="rowx grid 2autocolumn">
-              <h3 class="text-center" data-i18n="type"></h3>
-              <label data-i18n-title="head">
-                <input data-i18n-placeholder="head" name="attr_head" placeholder="head" title="@{head}" type="text" value=""/>
-              </label>
-            </div>
-          </div>
-        </div>
-        <div class="rowx grid 3column center">
-          <div class="col border">
-            <div class="rowx">
-              <h2 class="text-center" data-i18n="right arm"></h2>
-            </div>
-            <div class="rowx text-center"><span data-i18n="(11-20)"></span></div>
-            <div class="rowx grid 2autocolumn">
-              <h3 class="text-center" data-i18n="type"></h3>
-              <label data-i18n-title="right arm">
-                <input data-i18n-placeholder="right arm" name="attr_right_arm" placeholder="right arm" title="@{right_arm}" type="text" value=""/>
-              </label>
-            </div>
-          </div>
-          <div class="col border">
-            <div class="rowx">
-              <h2 class="text-center" data-i18n="body"></h2>
-            </div>
-            <div class="rowx text-center"><span data-i18n="(31-70)"></span></div>
-            <div class="rowx grid 2autocolumn">
-              <h3 class="text-center" data-i18n="type"></h3>
-              <label data-i18n-title="body">
-                <input data-i18n-placeholder="body" name="attr_body" placeholder="body" title="@{body}" type="text" value=""/>
-              </label>
-            </div>
-          </div>
-          <div class="col border">
-            <div class="rowx">
-              <h2 class="text-center" data-i18n="left arm"></h2>
-            </div>
-            <div class="rowx text-center"><span data-i18n="(21-30)"></span></div>
-            <div class="rowx grid 2autocolumn">
-              <h3 class="text-center" data-i18n="type"></h3>
-              <label data-i18n-title="left arm">
-                <input data-i18n-placeholder="left arm" name="attr_left_arm" placeholder="left arm" title="@{left_arm}" type="text" value=""/>
-              </label>
-            </div>
-          </div>
-        </div>
-        <div class="rowx grid 3column legs">
-          <div class="col border">
-            <div class="rowx">
-              <h2 class="text-center" data-i18n="right leg"></h2>
-            </div>
-            <div class="rowx text-center"><span data-i18n="(71-85)"></span></div>
-            <div class="rowx grid 2autocolumn">
-              <h3 class="text-center" data-i18n="type"></h3>
-              <label data-i18n-title="right leg">
-                <input data-i18n-placeholder="right leg" name="attr_right_leg" placeholder="right leg" title="@{right_leg}" type="text" value=""/>
-              </label>
-            </div>
-          </div>
-          <div class="col border">
-            <div class="rowx">
-              <h2 class="text-center" data-i18n="left leg"></h2>
-            </div>
-            <div class="rowx text-center"><span data-i18n="(86-00)"></span></div>
-            <div class="rowx grid 2autocolumn">
-              <h3 class="text-center" data-i18n="type"></h3>
-              <label data-i18n-title="left leg">
-                <input data-i18n-placeholder="left leg" name="attr_left_leg" placeholder="left leg" title="@{left_leg}" type="text" value=""/>
-              </label>
-            </div>
-          </div>
-        </div>
         <div class="rowx grid headers">
           <h1 class="text-center" data-i18n="gear"></h1>
         </div>
@@ -1550,15 +1546,17 @@
 </div>
 <script type="text/worker">
   const globalAttributesByCatagory = {
-	characteristics: ['weapon skill', 'ballistic skill', 'strength', 'toughness', 'agility', 'intelligence', 'perception', 'willpower', 'fellowship', 'infamy']
+	characteristics: ['weapon_skill', 'ballistic_skill', 'strength', 'toughness', 'agility', 'intelligence', 'perception', 'willpower', 'fellowship', 'infamy']
 }
 
-//module.exports = globalAttributesByCatagory;
+module.exports = globalAttributesByCatagory;
 
   // === SHARED FUNCTIONS
 const setAttributes = (update, silent) => { 
 	silent === true ? setAttrs(update, {silent:true}) : setAttrs(update); 
 };
+
+const replaceSpaces = name => key.replace(/ /g, '_')
 
 globalAttributesByCatagory.characteristics.forEach(characteristic => {
 	on(`change:${characteristic} change:${characteristic}_modifier_bonus`, () => {
@@ -1581,10 +1579,10 @@ const Helpers = {
 	convertInteger: string => parseInt(string) || 0,
 }
 
-//module.exports = Helpers;
+module.exports = Helpers;
 
   
-//const Helpers = require('./Helpers');
+const Helpers = require('./Helpers');
 
 const Characteristics = {
 	calculateAttributes: values => {
@@ -1597,6 +1595,6 @@ const Characteristics = {
 	divideByTen: score => Math.floor(score/10)
 }
 
-//module.exports = Characteristics;
+module.exports = Characteristics;
 
 </script>
