start of Hero Lab importer

--- a/Shadowrun5thEdition/src/js/tests/tests.html
+++ b/Shadowrun5thEdition/src/js/tests/tests.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>dropFunctions</title>
+    <title>Shadowrun Unit Tests</title>
     <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.9.2.css">
   </head>
   <body>
@@ -14,6 +14,7 @@
 
     <script src="../processingFunctions.js"></script>
     <script src="../shadowrunFunctions.js"></script>
+    <script src="../importer/importerHeroLab.js"></script>
     <script src="./tests.js"></script>
   </body>
 </html>
