--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1068,6 +1068,14 @@ class PrimaryArmor {
 }
 
 
+class Character {
+  constructor(name) {
+    this.character_name = name || ''
+    this.metatype = ''
+  }
+}
+
+
 
 const processingFunctions = {
   convertIntegerNegative: number => number > 0 ? -Math.abs(number) : number,
@@ -1975,12 +1983,8 @@ const onepointthreefive = () => {
   on("change:default_attribute", eventinfo => updateDefaultAttribute(eventinfo.newValue))
 
 
-	//IMPORTERS
-	const importHeroLab = (character) => {
-		console.log(`%c HERO LAB IMPORTER:`, "color: purple; font-weight:bold");
-	};
 
-	const importChummer = (character) => {
+	const importChummer = character => {
 		//Match Chummer JSON keys with their sheet attribute. 
 		//Chummer name is on the left, Roll20 sheet atribute on right.
 		const jsonKeys = {
@@ -2737,7 +2741,7 @@ const onepointthreefive = () => {
 		const mancerValues = mancerData["importer"].values;
 
 		Object.keys(mancerValues).forEach((key) => {
-			if (key == "builder" || key == "jsonData" || key == "hidden") {
+			if (key == "builder" || key == "importedData" || key == "hidden") {
 				delete mancerValues[key];
 			};
 		});
@@ -2750,129 +2754,298 @@ const onepointthreefive = () => {
 			finishCharactermancer();
 		});
 	}); 
-// CHARACTERMANCER IMPORTER
-	on("clicked:import_launch", (eventinfo) => {
-		startCharactermancer("importer");
-	});
+//:+:+:+:+: OLD/ORIGINAL CHUMMER CODE :+:+:+:+:
+const importerChummerProcessor = mancerValues => {
+  let applyEnabled = true;
+  let setText = {};
 
-	on("page:importer", () => {
-		setAttrs({builder: "Chummer"});
-		setCharmancerText({
-			"directions" : chummerDirections
-		});
-	});
-
-	on("clicked:import", () => {
-		const mancerData = getCharmancerData();
-		const mancerValues = mancerData["importer"].values;
-		let applyEnabled = true;
-	    let setText = {};
-
-	    // Verify the user entered a JSON in the textarea. If not, provide user feedabck.
-	    if (mancerValues.jsonData) {
-	    	const parsedData = JSON.parse(mancerValues.jsonData) || false;
-	    	setText[`import-feedback`] = "";
-	    	// There is a value in the textarea! Check to see if its a valid JSON. Provide users feeadback 
-	    	if (parsedData) {
-	    		setText[`import-feedback`] += `<p class="feedback">A valid JSON was imported for ${mancerValues.builder}.</p>`
-		      // Send the parsed data to the selected importer or let users know something went wrong 
-		      if (mancerValues.builder && mancerValues.builder === "Chummer") {
-				if (parsedData.characters && parsedData.characters.character) {
-					importChummer(parsedData.characters.character);
-		      	} else {
-					setText[`import-feedback`] += `<p class="warning">Parsed JSON is missing character data.</p>`;
-					applyEnabled = false
-		      	}
-		      } else if (mancerValues.builder && mancerValues.builder === "Hero Lab") {
-		      	importHeroLab();
-		      	setText[`import-feedback`] += `<p class="warning">Coming Soon....</p>`;
-		      } else {
-		      	setText[`import-feedback`] += `<p class="warning">A character builder was not selected. Try changing your selection then change it back if needed.</p>`;
-		      	applyEnabled = false
-		      }
-		    } else {
-		      setText[`import-feedback`] += `<p class="warning"><span>The text imported is not a valid JSON. Verify the JSON is formatted correctly. Check the format at,</span> JSONLint.com.</p>`;
-		      applyEnabled = false
-		    };
-	    } else {
-	    	 setText[`import-feedback`] = `<p class="warning">No information was entered in the JSON text area.</p>`;
-	    	 applyEnabled = false
-	    };
-
-	    let buttonStatus = (applyEnabled) ? "" : "disabled";
-	    setText[`finish-button`] = `<button class="finish" type="finish" value="apply" data-i18n="apply" ${buttonStatus}>Apply</button>`;
-
-	    setCharmancerText(setText);
-	});
-
-	const chummerDirections = `<ol>
-				<li>In Chummer mark your character as created</li>
-				<li>Go to File -> Export -> Export JSON</li>
-				<li>Copy the JSON in the file</li>
-				<li>Paste it into the textfield below</li>
-				<li>Click the Import button</li>
-				<li>Review the data. Use the checkbox <strong>Show Hidden Inputs</strong> to fix data.</li> 
-				<li>Click Apply to <u>overwrite</u> information on the character sheet</li>
-			</ol>`;
-
-	const herolabDirections = `
-		<ol>
-			<li>Download the file "HLtoRoll20Export.hl" from: https://drive.google.com/file/d/0B3E3jkp51s8aRmpTU1NMRjRIVkk/view</li>
-			<li>Double click the file. Hero Lab will import it automatically now.</li>
-			<li>Load a character</li>
-			<li>Go to File/Save Custom Output and select the "Roll20 Export"</li>
-			<li>Save the file. It should open automatically in your browser</li>
-			<li>Follow the directions.</li>
-		</ol>`;
-
-	on("change:builder", (eventinfo) => {
-		let setText = {};
-		setText[`directions`] = (eventinfo.newValue === "Chummer") ? chummerDirections : herolabDirections;
-		setCharmancerText(setText);
-	});
-
-  const clean = () => {
-    ['active', 'knowledge', 'language', 'quality', 'martial',
-      'range', 'melee', 'weapon', 'armor', 'augementations',
-      'items', 'NPCspell', 'spell', 'rituals', 'preps', 'powers',
-      'contacts', 'vehicle', 'lifestyle', "programs", "forms"].forEach(group => {
-      getSectionIDs(`repeating_${group}`, (ids) => {
-        ids.forEach((id) => {
-          removeRepeatingRow(`repeating_${group}_${id}`);
-        });
-      });
-    });
+  // Verify the user entered a JSON in the textarea. If not, provide user feedabck.
+  if (mancerValues.importedData) {
+    const parsedData = JSON.parse(mancerValues.importedData) || false;
+    setText[`import-feedback`] = "";
+    // There is a value in the textarea! Check to see if its a valid JSON. Provide users feeadback 
+    if (parsedData) {
+      setText[`import-feedback`] += `<p class="feedback">A valid JSON was imported for ${mancerValues.builder}.</p>`
+      // Send the parsed data to the selected importer or let users know something went wrong 
+      if (mancerValues.builder && mancerValues.builder === "Chummer") {
+        if (parsedData.characters && parsedData.characters.character) {
+          importChummer(parsedData.characters.character);
+        } else {
+          setText[`import-feedback`] += `<p class="warning">Parsed JSON is missing character data.</p>`;
+          applyEnabled = false
+        }
+      } else {
+        setText[`import-feedback`] += `<p class="warning">A character builder was not selected. Try changing your selection then change it back if needed.</p>`;
+        applyEnabled = false
+      }
+    } else {
+      setText[`import-feedback`] += `<p class="warning"><span>The text imported is not a valid JSON. Verify the JSON is formatted correctly. Check the format at,</span> JSONLint.com.</p>`;
+      applyEnabled = false
+    };
+  } else {
+    setText[`import-feedback`] = `<p class="warning">No information was entered in the JSON text area.</p>`;
+    applyEnabled = false
   };
 
-	//USEFUL FUNCTIONS
-	const capitialize = (string) => {
-		return string.charAt(0).toUpperCase() + string.slice(1);
-	};
+  let buttonStatus = (applyEnabled) ? "" : "disabled";
+  setText[`finish-button`] = `<button class="finish" type="finish" value="apply" data-i18n="apply" ${buttonStatus}>Apply</button>`;
 
-	const addFeedback = (attribute, value) => {
-		return `<p class="feedback"><strong>${capitialize(attribute)}:</strong> ${value} </p>`
-	};
+  setCharmancerText(setText);
+}
+const herolabDirections = `
+	<ol>
+		<li>Download the file "HLtoRoll20Export.hl" from: https://drive.google.com/file/d/0B3E3jkp51s8aRmpTU1NMRjRIVkk/view</li>
+		<li>Double click the file. Hero Lab will import it automatically now.</li>
+		<li>Load a character</li>
+		<li>Go to File/Save Custom Output and select the "Roll20 Export"</li>
+		<li>Save the file. It should open automatically in your browser</li>
+		<li>Follow the directions.</li>
+  </ol>`;
+  
+const importerHeroLabProcess = mancerValues => {
+  const rawStatBlockArray = mancerValues.importedData.split("\n")
+  const characterStatArray = removeUnnecessaryElements(rawStatBlockArray)
+  const hlCharacter = importerHeroLabBuildCharacter(characterStatArray)
+  const character = new Character(characterStatArray.shift())
 
-	const alphabatizeKeys = (unsortedJSON) => {
-		let alphabeticalKeys = {};
-		Object.keys(unsortedJSON).sort().forEach((key) => {
-			  alphabeticalKeys[key] = unsortedJSON[key];
-		});
-		return alphabeticalKeys
-	};
+  console.log("Hero Lab Data")
+  console.log(hlCharacter)
 
-	const getValInParen = (value) => {
-		return value.split("(")[1].split(")")[0];
-	};
+  console.log("CHARACTER")
+  console.log(character)
+}
 
-	const getArray = (array) => {
-		return Array.isArray(array) ? array : [ array ];
-	};
+const importerHeroLabBuildCharacter = characterStatArray => {
+  let hlCharacter = {}
 
-	const getSplitNum = (value) => {
-		return value.split("/")[0];
+  const findString = string => characterStatArray.find(element => element.includes(string))
+
+  //Player Character
+  hlCharacter.METATYPE = findString('METATYPE: ')
+  hlCharacter.attributes = findString('EDG ')
+  hlCharacter['Condition Monitor (P/S)'] = findString('Condition Monitor')
+  hlCharacter.Armor = findString('Armor: ')
+  hlCharacter.Limits = findString('Limits: ')
+  hlCharacter['Physical Initiative'] = findString('Physical Initiative:')
+  hlCharacter['Active Skills'] = findString('Active Skills: ')
+  hlCharacter['Knowledge Skills'] = findString('Knowledge Skills: ')
+  hlCharacter['Languages: '] = findString('Languages: ')
+  hlCharacter['Metatype Abilities: '] = findString('Metatype Abilities: ')
+  hlCharacter['Qualities: '] = findString('Qualities: ')
+
+  return hlCharacter
+}
+
+const removeUnnecessaryElements = rawStatBlockArray => {
+  let statBlock = []
+  rawStatBlockArray.forEach(line => {
+    if (line !== "" && !line.includes('Hero Lab') && !line.includes('Shadowrun © 2005')) {
+      statBlock.push(line)
+    }
+  })
+  return statBlock
+}
+
+//IMPORTERS
+const importHeroLab = character => {findIndexOfStringInArray
+  console.log(`%c HERO LAB IMPORTER:`, "color: purple; font-weight:bold")
+}
+
+/*
+Quin
+METATYPE: TROLL
+B 9, A 5/6, R 4, S 9/10, W 5, L 3, I 3, C 3, ESS 4.47, EDG 3
+Condition Monitor (P/S): 13 / 11
+Armor: 7
+Limits: Physical 11, Mental 5, Social 6
+Physical Initiative: 7+1D6
+Active Skills: Athletics Group 2, Con 3, Etiquette (Professional +2) 3, Exotic Melee Weapon: Garrote 6, Intimidation (Physical +2) 3, Negotiation 1, Pistols (Holdouts +2) 4, Sneaking (Urban +2) 4, Throwing Weapons (Blades +2) 2, Unarmed Combat 4
+Knowledge Skills: Rackateering 2, Syndicates 5
+Languages: English N, Or'Zet 5
+Metatype Abilities: Armor (+1), Enhanced Senses: Thermographic Vision
+Qualities: Code of Honor: Omerta, The Code of Silence (8dicepool vs. 4), Impassive, Jack of All Trades, Master of None, Social Appearance Anxiety (SAA) (1)
+Augmentations:
+   Datajack (Alphaware)
+   Gastric Neurostimulator
+   Muscle Replacement (Used) (1)
+   Perfect Eyes
+Vehicles:
+   Harley-Davidson Scorpion [Handling 4/3, Speed 4, Accel 2, Body 8, Armor 9, Pilot 1, Sensor 2, Seats 1]
+      Gear:
+         Metahuman Adjustment: Troll
+Gear:
+   Armor Clothing
+   Chisel/Crowbar
+   Cram
+   Kayden Fisher w/ Fake License: Motor Vehicle Operator (4), Fake SIN (4), (1 month) Middle Lifestyle
+   Novacoke
+   Renraku Sensei
+   Skein of aqua yarn
+   Summit Suit w/ -2 modifier for concealability, Custom Fit, Increase Social Limit by 1
+Weapons:
+   Streetline Special [Hold-out, Acc 4, DV 6P, AP –, SA, 6 (c)] w/ (10x) Regular Ammo
+   Extendable Baton [Club, Reach 2, Acc 5, DV 12P, AP –]
+   Garrote [Exotic Melee Weapon, Reach 1, Acc 5, DV 14S, AP -6]
+   Knife [Blade, Reach 1, Acc 5, DV 11P, AP -1]
+   Throwing Knife x5 [Throwing Weapon, Acc 11, DV 11P, AP -1]
+Contacts:
+Leo Markow (Connection 4, Loyalty 3)
+Louie "Nine Lives" Sans (Connection 4, Loyalty 4)
+Officer Ripley (Connection 1, Loyalty 1)
+
+
+Unnamed Hero
+Critter (Dog)
+B 4, A 3, R 4, S 4, W 3, L 2, I 4, C 3, ESS 6, EDG 3
+Condition Monitor (P/S): 10 / 10
+Movement: x2/x8/+4
+Armor: 0
+Limits: Physical 6, Mental 4, Social 5
+Physical Initiative: 8+1D6
+Active Skills: Intimidation 4, Perception (Smell +2) 5, Running 5, Tracking 6, Unarmed Combat 5
+Critter Powers: Domesticated, Enhanced Senses: Hearing, Enhanced Senses: Smell
+Weapons:
+   Claws/Bite [Unarmed, Acc 6, DV 5P, AP –]
+
+
+Unnamed Hero
+Level 2
+RACE: COURIER SPRITE
+W 4, L 3, I 5, C 2, Dev 2, Atk 2, Slz 5, DP 3, R 2, Fir 4
+Condition Monitor: 9
+Limits: Mental 5, Social 3
+Matrix Initiative: 5+5D6
+Active Skills: Computer 2, Hacking 2
+Sprite Powers: Cookie (4dicepool[5] vs. Intuition + Firewall), Hash (up to 20 combat turns)
+
+*/// CHARACTERMANCER IMPORTER
+on("clicked:import_launch", (eventinfo) => {
+	startCharactermancer("importer");
+});
+
+on("page:importer", () => {
+	setAttrs({ builder: "Hero Lab"});
+	setCharmancerText({
+		"directions": herolabDirections
+	})
+})
+
+on("clicked:import", () => {
+	const mancerData = getCharmancerData();
+	const mancerValues = mancerData["importer"].values;
+	let applyEnabled = true;
+	let setText = {};
+
+	if (mancerValues.builder === "Hero Lab") {
+		importerHeroLabProcess(mancerValues)
+	} else if (mancerValues.builder === "Chummer") {
+		importerChummerProcessor(mancerValues)
+	} else {
+		console.warn("Builder type not selected")
 	}
-</script><!-- CHARACTERMANCER IMPORTER -->
+})
+
+const chummerDirections = `
+	<ol>
+		<li>In Chummer mark your character as created</li>
+		<li>Go to File -> Export -> Export JSON</li>
+		<li>Copy the JSON in the file</li>
+		<li>Paste it into the textfield below</li>
+		<li>Click the Import button</li>
+		<li>Review the data. Use the checkbox <strong>Show Hidden Inputs</strong> to fix data.</li> 
+		<li>Click Apply to <u>overwrite</u> information on the character sheet</li>
+	</ol>`;
+
+on("change:builder", (eventinfo) => {
+	let setText = {};
+	setText[`directions`] = (eventinfo.newValue === "Chummer") ? chummerDirections : herolabDirections;
+	setCharmancerText(setText);
+});
+
+const clean = () => {
+	['active', 'knowledge', 'language', 'quality', 'martial',
+		'range', 'melee', 'weapon', 'armor', 'augementations',
+		'items', 'NPCspell', 'spell', 'rituals', 'preps', 'powers',
+		'contacts', 'vehicle', 'lifestyle', "programs", "forms"].forEach(group => {
+		getSectionIDs(`repeating_${group}`, (ids) => {
+			ids.forEach((id) => {
+				removeRepeatingRow(`repeating_${group}_${id}`);
+			});
+		});
+	});
+};
+
+//USEFUL FUNCTIONS
+const capitialize = (string) => {
+	return string.charAt(0).toUpperCase() + string.slice(1);
+};
+
+const addFeedback = (attribute, value) => {
+	return `<p class="feedback"><strong>${capitialize(attribute)}:</strong> ${value} </p>`
+};
+
+const alphabatizeKeys = (unsortedJSON) => {
+	let alphabeticalKeys = {};
+	Object.keys(unsortedJSON).sort().forEach((key) => {
+			alphabeticalKeys[key] = unsortedJSON[key];
+	});
+	return alphabeticalKeys
+};
+
+const getValInParen = (value) => {
+	return value.split("(")[1].split(")")[0];
+};
+
+const getArray = (array) => {
+	return Array.isArray(array) ? array : [ array ];
+};
+
+const getSplitNum = (value) => {
+	return value.split("/")[0];
+}
+
+
+	//:+:+:+:+: OLD/ORIGINAL CHUMMER CODE :+:+:+:+:
+const chummerImporter = mancerValues => {
+	let applyEnabled = true;
+	let setText = {};
+
+	// Verify the user entered a JSON in the textarea. If not, provide user feedabck.
+	if (mancerValues.importedData) {
+		const parsedData = JSON.parse(mancerValues.importedData) || false;
+		setText[`import-feedback`] = "";
+		// There is a value in the textarea! Check to see if its a valid JSON. Provide users feeadback 
+		if (parsedData) {
+			setText[`import-feedback`] += `<p class="feedback">A valid JSON was imported for ${mancerValues.builder}.</p>`
+			// Send the parsed data to the selected importer or let users know something went wrong 
+			if (mancerValues.builder && mancerValues.builder === "Chummer") {
+				if (parsedData.characters && parsedData.characters.character) {
+					importChummer(parsedData.characters.character);
+				} else {
+					setText[`import-feedback`] += `<p class="warning">Parsed JSON is missing character data.</p>`;
+					applyEnabled = false
+				}
+			} else if (mancerValues.builder && mancerValues.builder === "Hero Lab") {
+				importHeroLab();
+				setText[`import-feedback`] += `<p class="warning">Coming Soon....</p>`;
+			} else {
+				setText[`import-feedback`] += `<p class="warning">A character builder was not selected. Try changing your selection then change it back if needed.</p>`;
+				applyEnabled = false
+			}
+		} else {
+			setText[`import-feedback`] += `<p class="warning"><span>The text imported is not a valid JSON. Verify the JSON is formatted correctly. Check the format at,</span> JSONLint.com.</p>`;
+			applyEnabled = false
+		};
+	} else {
+		setText[`import-feedback`] = `<p class="warning">No information was entered in the JSON text area.</p>`;
+		applyEnabled = false
+	};
+
+	let buttonStatus = (applyEnabled) ? "" : "disabled";
+	setText[`finish-button`] = `<button class="finish" type="finish" value="apply" data-i18n="apply" ${buttonStatus}>Apply</button>`;
+
+	setCharmancerText(setText);
+}</script><!-- CHARACTERMANCER IMPORTER -->
 <charmancer class="sheet-charmancer-importer">
 	<div class="mancer-box">
 		<h1>Shadowrun Fifth Edition Character Importer</h1>
@@ -2884,14 +3057,14 @@ const onepointthreefive = () => {
 				<h4>Chummer</h4>
 				<input type="radio" name="comp_builder" value="Chummer" checked />
 			</label>
-			<!--<label title="choose hero lab">
+			<label title="choose hero lab">
 				<h4>Hero Lab</h4>
 				<input type="radio" name="comp_builder" value="Hero Lab" />
-			</label>-->
+			</label>
 		</div>
 		<div class="directions"></div>
 		<h3>Enter JSON Here</h3>
-		<textarea name="comp_jsonData" placeholder="Add JSON here"></textarea>
+		<textarea name="comp_importedData" placeholder="Add JSON here"></textarea>
 		<button type="action" name="act_import" data-i18n="import">Import</button>
 
 		<hr />
