--- a/Shadowrun5thEdition/src/html/importer.html
+++ b/Shadowrun5thEdition/src/html/importer.html
@@ -10,14 +10,14 @@
 				<h4>Chummer</h4>
 				<input type="radio" name="comp_builder" value="Chummer" checked />
 			</label>
-			<!--<label title="choose hero lab">
+			<label title="choose hero lab">
 				<h4>Hero Lab</h4>
 				<input type="radio" name="comp_builder" value="Hero Lab" />
-			</label>-->
+			</label>
 		</div>
 		<div class="directions"></div>
 		<h3>Enter JSON Here</h3>
-		<textarea name="comp_jsonData" placeholder="Add JSON here"></textarea>
+		<textarea name="comp_importedData" placeholder="Add JSON here"></textarea>
 		<button type="action" name="act_import" data-i18n="import">Import</button>
 
 		<hr />
