starting object oriented approach

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1075,6 +1075,20 @@ class Character {
   }
 }
 
+class NPC extends Character {
+  constructor(name) {
+    super(name)
+
+  }
+}
+
+class PC extends Character {
+  constructor(name) {
+    super(name)
+    this.metatype = ''
+  }  
+}
+
 
 
 const processingFunctions = {
@@ -2801,40 +2815,35 @@ const herolabDirections = `
   
 const importerHeroLabProcess = mancerValues => {
   const rawStatBlockArray = mancerValues.importedData.split("\n")
-  const characterStatArray = removeUnnecessaryElements(rawStatBlockArray)
-  const hlCharacter = importerHeroLabBuildCharacter(characterStatArray.entries())
-  const character = new Character(characterStatArray.shift())
-
-  //console.log(characterStatArray)
+  const splitStatBlock = removeUnnecessaryElements(rawStatBlockArray)
+  const characterHeroLab = processStatBlockObject(splitStatBlock.entries())
 
   console.log("Hero Lab Data")
-  console.log(hlCharacter)
-
-  //console.log("CHARACTER")
-  //console.log(character)
+  console.log(characterHeroLab)
 }
 
-const importerHeroLabBuildCharacter = characterStatArray => {
-  let hlCharacter = {}
+const processStatBlockObject = statBlockObject => {
+  const characterHeroLab = new HeroLabCharacter(statBlockObject[0])
+  delete statBlockObject[0]
 
   const findString = string => characterStatArray.find(element => element.includes(string))
 
   //Player Character
-  hlCharacter.METATYPE = findString('METATYPE: ')
-  hlCharacter.attributes = findString('EDG ')
-  hlCharacter['Condition Monitor (P/S)'] = findString('Condition Monitor')
-  hlCharacter.Armor = findString('Armor: ')
-  hlCharacter.Limits = findString('Limits: ')
-  hlCharacter['Physical Initiative'] = findString('Physical Initiative:')
-  hlCharacter['Active Skills'] = findString('Active Skills: ')
-  hlCharacter['Knowledge Skills'] = findString('Knowledge Skills: ')
-  hlCharacter['Languages: '] = findString('Languages: ')
-  hlCharacter['Metatype Abilities: '] = findString('Metatype Abilities: ')
-  hlCharacter['Qualities: '] = findString('Qualities: ')
+  //hlCharacter.METATYPE = findString('METATYPE: ')
+  //hlCharacter.attributes = findString('EDG ')
+  //hlCharacter['Condition Monitor (P/S)'] = findString('Condition Monitor')
+  //hlCharacter.Armor = findString('Armor: ')
+  //hlCharacter.Limits = findString('Limits: ')
+  //hlCharacter['Physical Initiative'] = findString('Physical Initiative:')
+  //hlCharacter['Active Skills'] = findString('Active Skills: ')
+  //hlCharacter['Knowledge Skills'] = findString('Knowledge Skills: ')
+  //hlCharacter['Languages: '] = findString('Languages: ')
+  //hlCharacter['Metatype Abilities: '] = findString('Metatype Abilities: ')
+  //hlCharacter['Qualities: '] = findString('Qualities: ')
 
-  hlCharacter['Augmentations:'] = findNestedEntries(characterStatArray, 'Augmentations')
+ // hlCharacter['Augmentations:'] = findNestedEntries(characterStatArray, 'Augmentations')
 
-  return hlCharacter
+  return characterHeroLab
 }
 
 const findIndexOfString = (array, string) => {
@@ -2970,7 +2979,7 @@ on("clicked:import", () => {
 	if (mancerValues.builder === "Hero Lab") {
 		importerHeroLabProcess(mancerValues)
 	} else if (mancerValues.builder === "Chummer") {
-		importerChummerProcessor(mancerValues)
+		chummerImporter(mancerValues)
 	} else {
 		console.warn("Builder type not selected")
 	}
