--- a/Shadowrun5thEdition/src/js/tests/tests.html
+++ b/Shadowrun5thEdition/src/js/tests/tests.html
@@ -11,10 +11,14 @@
     <div id="qunit-fixture"></div>
     <script src="https://code.jquery.com/qunit/qunit-2.9.2.js"></script>
     <script src="../../classes/Mocks/Mocks.js"></script>
-
+    <!-- Sheet workers -->
     <script src="../processingFunctions.js"></script>
     <script src="../shadowrunFunctions.js"></script>
+    <!-- Importer tests -->
     <script src="../importer/importerHeroLab.js"></script>
+    <script src="../Classes/Character.js"></script>
+    <script src="../Classes/HeroLabCharacter.js"></script>
+
     <script src="./tests.js"></script>
   </body>
 </html>
