--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1090,6 +1090,30 @@ class PC extends Character {
 }
 
 
+class HeroLabCharacter {
+  constructor(name) {
+    this.name = name || 'Unamed Hero'
+    this.metatype = 'METATYPE: '
+    this.attributes = 'EDG ' //Vehicles, Spirits, Sprites, Critters may not have this attribute adjust as needed
+    this.condition_monitors = 'Condition Monitor '
+    this.armor = 'Armor: '
+    this.limits = 'Limits: '
+    this.physical_initiative = 'Physical Initiative: '
+    this.active_skills = 'Active Skills: '
+    this.knowledge_skills = 'Knowledge Skills: '
+    this.language_skills = 'Languages: '
+    this.metatype_abilities = 'Metatype Abilities: '
+    this.qualities = 'Qualities: '
+
+    this.repeating = {
+      "Augemenations": [],
+      "Gear": [],
+      "Weapons": []
+    }
+  }
+}
+
+
 
 const processingFunctions = {
   convertIntegerNegative: number => number > 0 ? -Math.abs(number) : number,
@@ -2816,7 +2840,7 @@ const herolabDirections = `
 const importerHeroLabProcess = mancerValues => {
   const rawStatBlockArray = mancerValues.importedData.split("\n")
   const splitStatBlock = removeUnnecessaryElements(rawStatBlockArray)
-  const characterHeroLab = processStatBlockObject(splitStatBlock.entries())
+  const characterHeroLab = processStatBlockObject(Object.assign({}, splitStatBlock))
 
   console.log("Hero Lab Data")
   console.log(characterHeroLab)
@@ -2826,20 +2850,22 @@ const processStatBlockObject = statBlockObject => {
   const characterHeroLab = new HeroLabCharacter(statBlockObject[0])
   delete statBlockObject[0]
 
-  const findString = string => characterStatArray.find(element => element.includes(string))
-
-  //Player Character
-  //hlCharacter.METATYPE = findString('METATYPE: ')
-  //hlCharacter.attributes = findString('EDG ')
-  //hlCharacter['Condition Monitor (P/S)'] = findString('Condition Monitor')
-  //hlCharacter.Armor = findString('Armor: ')
-  //hlCharacter.Limits = findString('Limits: ')
-  //hlCharacter['Physical Initiative'] = findString('Physical Initiative:')
-  //hlCharacter['Active Skills'] = findString('Active Skills: ')
-  //hlCharacter['Knowledge Skills'] = findString('Knowledge Skills: ')
-  //hlCharacter['Languages: '] = findString('Languages: ')
-  //hlCharacter['Metatype Abilities: '] = findString('Metatype Abilities: ')
-  //hlCharacter['Qualities: '] = findString('Qualities: ')
+  const findStringInArray = (array, string) => array.find(element => element.includes(string))
+  
+  for (let [key, findString] of Object.entries(characterHeroLab)) {
+    if (key != 'name' && key != 'repeating') {
+      if (findStringInArray(Object.values(statBlockObject), findString)) {
+        for (let [indexKey, value] of Object.entries(statBlockObject)) {
+          if (value.includes(findString)) {
+            characterHeroLab[key] = key === 'attributes' ? value : value.split(findString)[1]
+            delete statBlockObject[indexKey]
+          }
+        } 
+      } else {
+        characterHeroLab[key] = ''
+      }
+    }
+  }
 
  // hlCharacter['Augmentations:'] = findNestedEntries(characterStatArray, 'Augmentations')
 
