--- a/Shadowrun Sixth World/Shadowrun6thEdition.html
+++ b/Shadowrun Sixth World/Shadowrun6thEdition.html
@@ -433,9 +433,9 @@
 <option value="Stealth" data-i18n="Stealth">Stealth</option>
 <option value="Tasking" data-i18n="Tasking">Tasking</option>
                   </select>
-                  <label data-i18n-title="name" title="name">
+                  <!-- <label data-i18n-title="name" title="name">
                     <input name="attr_name" placeholder="name" type="text" title="undefined_name"/>
-                  </label>
+                  </label> -->
                   <label data-i18n-title="rating" title="rating">
                     <input name="attr_rating" min="0" placeholder="0" type="number" title="undefined_rating"/>
                   </label>
